[add] center screen layout

--- a/public/src/Components/App/global.scss
+++ b/public/src/Components/App/global.scss
@@ -7,3 +7,8 @@ $ubuntu: 'Ubuntu', sans-serif;
   font-family: 'finland';
   src: url('../../../dist/assets/FinlandRoundedThin.ttf');
 }
+
+// Colors
+$gold: #F6B404;
+$black: #1D1D1B;
+$white: #FFF7EC;
