--- a/public/src/Components/CenterScreen/center.scss
+++ b/public/src/Components/CenterScreen/center.scss
@@ -5,19 +5,41 @@
   height: 100vh;
   position: relative;
   overflow: hidden;
-  background: $white;
-  // background: {
-  //   image: url(../../../dist/assets/logocolored.png);
-  //   position: center center;
-  //   repeat: no-repeat;
-  //   size: cover;
-  //   // opacity: .3;
-  // }
+
+  // background-color: #fff;
+  // background-image:
+  // linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+  // linear-gradient(#eee .1em, transparent .1em);
+  // background-size: 100% 1.2em;
+  // background: #B2D9D4;
+
+  background: linear-gradient(#ffffff 50%, rgba(255,255,255,0) 0) 0 0,
+  radial-gradient(circle closest-side, #FFFFFF 53%, rgba(255,255,255,0) 0) 0 0,
+  radial-gradient(circle closest-side, #FFFFFF 50%, rgba(255,255,255,0) 0) 55px 0 #48B;
+  background-size: 110px 200px;
+  background-repeat: repeat-x;
 
   * {
     font-family: "finland";
     // outline: 1px solid red;
   }
+  z-index: 1;
+}
+.backgroundImage1 {
+  position: absolute;
+  width: 800px;
+  height: auto;
+  z-index: 0;
+  bottom: -16%;
+  left: 150px;
+}
+.logo {
+  position: absolute;
+  width: 400px;
+  height: auto;
+  z-index: 0;
+  right: 0;
+  transform: rotate(30deg);
 }
 // .center-container {
 //   background: #1D1D1B33;
@@ -39,13 +61,12 @@
 }
 .animatingImg {
   position: absolute;
-  top: 15%;
-  left: 2%;
-  width: 800px;
-  height: 800px;
+  top: 24%;
+  left: 8%;
+  width: 600px;
+  height: 600px;
   background: white;
-  // border: 1px solid red;
-  border-radius: 50% 50%;
+  border-radius: 50% 50%
 }
 .steps {
   // background: $white;
@@ -56,6 +77,7 @@
     font-size: 60px;
     font-weight: 600;
     color: $gold;
+    // color: #FCCD75;
   }
   h4 {
     font-size: 45px;
