--- a/public/src/Components/LeftScreen/left.scss
+++ b/public/src/Components/LeftScreen/left.scss
@@ -3,5 +3,31 @@
 #left {
   width: 100vw;
   height: 100vh;
-  background: orange;
+  // background: orange;
+
+  * {
+    font-family: "finland";
+    outline: 1px solid red;
+  }
+}
+.leftHeader h3 {
+  font-size: 100px;
+  font-weight: 1000;
+  text-align: center;
+}
+.leftItems {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
+  height: 80%;
+}
+.item {
+  margin: auto 0;
+  h3 {
+    font-size: 60px;
+  }
+  p {
+    font-size: 45px;
+  }
 }
