[add] right screen layout

--- a/public/src/Components/CenterScreen/center.scss
+++ b/public/src/Components/CenterScreen/center.scss
@@ -13,11 +13,11 @@
   // background-size: 100% 1.2em;
   // background: #B2D9D4;
 
-  background: linear-gradient(#ffffff 50%, rgba(255,255,255,0) 0) 0 0,
-  radial-gradient(circle closest-side, #FFFFFF 53%, rgba(255,255,255,0) 0) 0 0,
-  radial-gradient(circle closest-side, #FFFFFF 50%, rgba(255,255,255,0) 0) 55px 0 #48B;
-  background-size: 110px 200px;
-  background-repeat: repeat-x;
+  // background: linear-gradient(#ffffff 50%, rgba(255,255,255,0) 0) 0 0,
+  // radial-gradient(circle closest-side, #FFFFFF 53%, rgba(255,255,255,0) 0) 0 0,
+  // radial-gradient(circle closest-side, #FFFFFF 50%, rgba(255,255,255,0) 0) 55px 0 #48B;
+  // background-size: 110px 200px;
+  // background-repeat: repeat-x;
 
   * {
     font-family: "finland";
