--- a/public/src/Components/LeftScreen/left.scss
+++ b/public/src/Components/LeftScreen/left.scss
@@ -7,7 +7,7 @@
 
   * {
     font-family: "finland";
-    outline: 1px solid red;
+    // outline: 1px solid red;
   }
 }
 .leftHeader h3 {
@@ -22,10 +22,15 @@
   margin: 0 auto;
   height: 80%;
 }
+.itemNprice {
+  display: flex;
+  justify-content: space-between;
+}
 .item {
   margin: auto 0;
   h3 {
     font-size: 60px;
+    font-weight: 600;
   }
   p {
     font-size: 45px;
