[add] left board draft

--- a/public/src/Components/App/global.scss
+++ b/public/src/Components/App/global.scss
@@ -8,6 +8,10 @@ $ubuntu: 'Ubuntu', sans-serif;
   src: url('../../../dist/assets/FinlandRoundedThin.ttf');
 }
 
+/* Montserrat */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+$montserrat: 'Montserrat', sans-serif;
+
 // Colors
 $gold: #F6B404;
 $black: #1D1D1B;
