--- a/public/src/Components/LeftScreen/left.scss
+++ b/public/src/Components/LeftScreen/left.scss
@@ -1,38 +1,88 @@
-@import '../App/global.scss';
+// @import '../App/global.scss';
 
-#left {
-  width: 100vw;
-  height: 100vh;
-  // background: orange;
+// #left {
+//   width: 100vw;
+//   height: 100vh;
+//   background: #E5E5E5;
+//   position: relative;
+//   z-index: 1;
+//   // background: url(https://images.unsplash.com/photo-1517219854193-cd7963d98ad4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80) 50% 50% no-repeat;
+//   // background-size: cover;
 
-  * {
-    font-family: "finland";
-    // outline: 1px solid red;
-  }
-}
-.leftHeader h3 {
-  font-size: 100px;
-  font-weight: 1000;
-  text-align: center;
-}
-.leftItems {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 auto;
-  height: 80%;
-}
-.itemNprice {
-  display: flex;
-  justify-content: space-between;
-}
-.item {
-  margin: auto 0;
-  h3 {
-    font-size: 60px;
-    font-weight: 600;
-  }
-  p {
-    font-size: 45px;
-  }
-}
+//   // background: linear-gradient(#ffffff 50%, rgba(255,255,255,0) 0) 0 0,
+//   // radial-gradient(circle closest-side, #FFFFFF 53%, rgba(255,255,255,0) 0) 0 0,
+//   // radial-gradient(circle closest-side, #FFFFFF 50%, rgba(255,255,255,0) 0) 55px 0 #48B;
+//   // background-size: 110px 200px;
+//   // background-repeat: repeat-x;
+
+//   * {
+//     // font-family: "finland";
+//     font-family: $montserrat;
+//     // outline: 1px solid red;
+//   }
+// }
+
+// .pokeImage1 {
+//   position: absolute;
+//   width: 800px;
+//   height: auto;
+//   top: 15%;
+//   z-index: 0;
+//   left: 3%;
+//   // transform: rotate(20deg);
+//   filter: drop-shadow(40px 40px 15px #C0C0C0);
+// }
+// .leftHeader h3 {
+//   margin-top: 1%;
+//   font-size: 80px;
+//   font-weight: 600;
+//   // font-size: 100px;
+//   // font-weight: 1000;
+//   text-align: center;
+//   color: $black;
+//   // filter: drop-shadow(30px 20px 4px lightgrey);
+// }
+// .leftItems {
+//   // position: absolute;
+//   // display: flex;
+//   // height: 80%;
+//   // flex-direction: column;
+//   // width: 35%;
+//   // // filter: drop-shadow(30px 20px 4px lightgrey);
+//   // right: 11%;
+//   // background: white;
+//   // padding: 5%;
+
+//   position: absolute;
+//   display: flex;
+//   height: 68%;
+//   flex-direction: column;
+//   width: 30%;
+//   right: 11%;
+//   // background: #FFF7EC;
+//   background: #E9D2BC;
+//   padding: 5%;
+//   box-shadow: 30px 20px 4px lightgrey;
+// }
+// // .left_left {
+// //   height: 80%;
+// // }
+// .itemNprice {
+//   display: flex;
+//   justify-content: space-between;
+// }
+// .item {
+//   margin: auto 0;
+//   h3 {
+//     // color: $gold;
+//     // font-size: 60px;
+//     // font-weight: 600;
+//     // font-size: 45px;
+//     font-size: 40px;
+//     font-weight: 500;
+//   }
+//   p {
+//     // font-size: 45px;
+//     font-size: 30px;
+//   }
+// }
