--- a/public/src/Components/App/reset.scss
+++ b/public/src/Components/App/reset.scss
@@ -46,19 +46,31 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-// html, body {
-//   width: 100%;
-//   height: 100vh;
-//   margin: 0px;
-//   padding: 0px;
-// 	overflow-x: scroll; 
-// 	overflow-y: hidden;
-//   z-index: 0;
-// }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+	overflow-x: scroll; 
+	overflow-y: hidden;
+  z-index: 0;
+}
+#wrapper {
+	scroll-snap-type: x mandatory;
+	display: flex;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	// -webkit-overflow-scrolling: touch;
+	height: 1080px;
+	width: 300%;
 
+	* {
+		scroll-snap-align: center;
+	}
+}
 
 * {
-		-webkit-overflow-scrolling: touch;
+		// -webkit-overflow-scrolling: touch;
 		// outline: 1px solid red;
 }
 // * {
