--- a/public/src/Components/RightScreen/right.scss
+++ b/public/src/Components/RightScreen/right.scss
@@ -5,6 +5,15 @@
   height: 100vh;
   // background: red;
 
+  background: url(https://static.vecteezy.com/system/resources/previews/000/152/826/large_2x/vector-old-vintage-paper-texture.jpg) 50% 50% no-repeat;
+  background-size: cover;
+
+  // background: linear-gradient(#ffffff 50%, rgba(255,255,255,0) 0) 0 0,
+  // radial-gradient(circle closest-side, #FFFFFF 53%, rgba(255,255,255,0) 0) 0 0,
+  // radial-gradient(circle closest-side, #FFFFFF 50%, rgba(255,255,255,0) 0) 55px 0 #48B;
+  // background-size: 110px 200px;
+  // background-repeat: repeat-x;
+
   * {
     font-family: "finland";
   }
@@ -13,6 +22,7 @@
   font-size: 100px;
   font-weight: 1000;
   text-align: center;
+  margin-top: 1%;
 }
 .snackItems {
   display: flex;
