--- a/public/src/Components/LeftScreen/leftMinimal.scss
+++ b/public/src/Components/LeftScreen/leftMinimal.scss
@@ -7,10 +7,8 @@
   position: relative;
   z-index: 1;
 
-
   * {
     font-family: "finland";
-    // font-family: $montserrat;
   }
 }
 
@@ -18,21 +16,19 @@
   position: absolute;
   width: 800px;
   height: auto;
-  top: -20%;
+  top: -21%;
   z-index: 0;
   left: 3%;
-  filter: drop-shadow(40px 40px 15px #C0C0C0);
+  filter: drop-shadow(40px 40px 20px #C0C0C0);
 }
 .leftHeader h3 {
   position: absolute;
-  /* margin-top: 1%; */
-  font-size: 120px;
+  font-size: 140px;
   font-weight: 1000;
   color: #1D1D1B;
-  bottom: 35%;
-  left: 10%;
+  bottom: 32%;
+  left: 8%;
   text-transform: uppercase;
-  font-family: "finland";
 }
 .leftItems {
   position: absolute;
@@ -40,41 +36,31 @@
   width: 45%;
   right: 5%;
   top: 5%;
-  // background: url(https://images.unsplash.com/photo-1506968430777-bf7784a87f23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80) 50% 50% no-repeat;
-  background: url(https://cdn.pixabay.com/photo/2014/11/05/12/08/chalkboard-517818_960_720.jpg) 50% 50% no-repeat;
+  background: url(https://c1.staticflickr.com/3/2767/4030906858_69ccce05c8_b.jpg) 50% 50% no-repeat;
   background-size: cover;
   box-shadow: 20px 20px 20px #A9A9A9;
-  // background: #E9D2BC;
 }
 .left_left {
-  // background: rgba(0,0,0,.3);
-  // border: 1px solid black;
-  // margin: 3%;
   width: 94%;
   height: 95%;
+  // height: 95%;
   padding: 3%;
-  // display: flex;
-  // flex-direction: column;
-  // margin: auto 0;
+  margin: 0 auto;
 }
 .itemNprice {
   display: flex;
   justify-content: space-between;
 }
-.item {
-  // margin: auto 0;
+.items {
+  margin: 0 auto;
   h3 {
     color: $white;
-    // color: $gold;
     font-size: 60px;
     font-weight: 600;
-    // font-size: 45px;
-    // font-size: 40px;
-    // font-weight: 500;
   }
   p {
     color: $white;
     font-size: 50px;
-    // font-size: 30px;
+    font-weight: 400;
   }
 }
