--- a/public/src/Components/CenterScreen/centerMinimal.scss
+++ b/public/src/Components/CenterScreen/centerMinimal.scss
@@ -8,7 +8,7 @@
   background: #E5E5E5;
 
   * {
-    font-family: "finland";
+    font-family: "finlandReg";
     // outline: 1px solid red;
   }
   z-index: 1;
