--- a/public/src/Components/RightScreen/right.scss
+++ b/public/src/Components/RightScreen/right.scss
@@ -1,39 +1,92 @@
 @import '../App/global.scss';
 
 #right {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: #E5E5E5;
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
 
   * {
     font-family: "finland";
+    outline: 1px solid red;
   }
 }
-.rightHeader {
-  font-size: 100px;
-  font-weight: 1000;
-  text-align: center;
-  margin-top: 1%;
+.slideshow {
+  width: 45%;
+  height: 80%;
+  margin: auto;
+  filter: drop-shadow(40px 40px 20px #C0C0C0);
 }
-.snackItems {
+.right_screen {
+  width: 45%;
+  height: 80%;
   display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 auto;
+  margin: auto;
+}
 
-  h2 {
-    font-size: 80px;
-    font-weight: 800;
-  }
-}
-.roll {
-  position: absolute;
-  right: 10%;
-  filter: drop-shadow(40px 40px 10px #C0C0C0);
-}
-.coke {
-  position: absolute;
-  filter: drop-shadow(40px 40px 10px #C0C0C0);
+.slide-container {
+  width: 70%;
+  margin: auto; }
 
+h3 {
+  text-align: center; }
+
+.each-slide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  height: 864px;
 }
+
+.each-slide span {
+  padding: 20px;
+  font-size: 20px;
+  background: #efefef;
+  text-align: center;
+}
+
+// .each-fade {
+//   display: flex;
+// }
+
+// .each-fade .image-container {
+//   width: 75%;
+//   overflow: hidden;
+// }
+
+// .each-fade .image-container img {
+//   width: 100%;
+// }
+
+// .each-fade h2 {
+//   width: 25%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 0;
+//   background: #adceed;
+// }
+
+// .rightHeader {
+//   font-size: 100px;
+//   font-weight: 1000;
+//   text-align: center;
+//   margin-top: 1%;
+// }
+// .snackItems {
+//   display: flex;
+//   flex-direction: column;
+//   width: 80%;
+//   margin: 0 auto;
+
+//   h2 {
+//     font-size: 80px;
+//     font-weight: 800;
+//   }
+// }
