--- a/public/src/Components/RightScreen/right.scss
+++ b/public/src/Components/RightScreen/right.scss
@@ -12,7 +12,7 @@
 
   * {
     font-family: "finland";
-    outline: 1px solid red;
+    // outline: 1px solid red;
   }
 }
 .slideshow {
@@ -22,10 +22,23 @@
   filter: drop-shadow(40px 40px 20px #C0C0C0);
 }
 .right_screen {
-  width: 45%;
-  height: 80%;
-  display: flex;
-  margin: auto;
+  width: 50%;
+  height: 100%;
+  position: relative;
+
+}
+.top {
+  height: 40%;
+}
+.bottom {
+  // height: 50%;
+}
+.ramen {
+  position: absolute;
+  width: 97%;
+  height: auto;
+  bottom: 0;
+  right: 0;
 }
 
 .slide-container {
@@ -40,7 +53,7 @@ h3 {
   align-items: center;
   justify-content: center;
   background-size: cover;
-  background-position: center;
+  background-position: center 30%;
   height: 864px;
 }
 
