--- a/public/src/Components/RightScreen/right.scss
+++ b/public/src/Components/RightScreen/right.scss
@@ -22,24 +22,24 @@
   filter: drop-shadow(40px 40px 20px #C0C0C0);
 }
 .right_screen {
-  width: 50%;
-  height: 100%;
-  position: relative;
-
+  width: 45%;
+  height: 80%;
+  // filter: drop-shadow(40px 40px 20px #C0C0C0);
+  margin: auto
 }
-.top {
-  height: 40%;
-}
-.bottom {
-  // height: 50%;
-}
-.ramen {
-  position: absolute;
-  width: 97%;
-  height: auto;
-  bottom: 0;
-  right: 0;
-}
+// .top {
+//   height: 40%;
+// }
+// .bottom {
+//   height: 100%;
+// }
+// .ramen {
+//   // position: absolute;
+//   width: 97%;
+//   height: auto;
+// //   bottom: 0;
+// //   right: 0;
+// }
 
 .slide-container {
   width: 70%;
@@ -64,18 +64,19 @@ h3 {
   text-align: center;
 }
 
-// .each-fade {
-//   display: flex;
-// }
+.each-fade {
+  display: flex;
+}
 
-// .each-fade .image-container {
-//   width: 75%;
-//   overflow: hidden;
-// }
+.each-fade .image-container {
+  width: 100%;
+  overflow: hidden;
+}
 
-// .each-fade .image-container img {
-//   width: 100%;
-// }
+.each-fade .image-container img {
+  width: 100%;
+  height: 864px;
+}
 
 // .each-fade h2 {
 //   width: 25%;
