--- a/public/src/Components/RightScreen/right.scss
+++ b/public/src/Components/RightScreen/right.scss
@@ -20,12 +20,21 @@
   height: 80%;
   margin: auto;
   filter: drop-shadow(40px 40px 20px #C0C0C0);
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .right_screen {
   width: 45%;
   height: 80%;
   // filter: drop-shadow(40px 40px 20px #C0C0C0);
-  margin: auto
+  margin: auto;
+
+  // img {
+  //   width: 100%;
+  // }
 }
 // .top {
 //   height: 40%;
